Fix padding discrepancy on mobile

--- a/css/output.css
+++ b/css/output.css
@@ -214,7 +214,10 @@ h3.toggle-issue::after {
   .subsection {
     flex-grow: 1;
     flex-basis: 50%;
-    padding: 0 80px; } }
+    padding: 0 80px; }
+
+  .subsection.extra-padding {
+    padding: 40px 80px; } }
 @media (max-width: 1000px) {
   .section.outer#landing-section {
     padding: 80px 0 0 0; }
@@ -223,7 +226,10 @@ h3.toggle-issue::after {
     display: none; }
 
   .subsection {
-    padding: 0 30px; } }
+    padding: 0 30px; }
+
+  .subsection.extra-padding {
+    padding: 40px 30px; } }
 .section.outer.c-white h2 {
   border-bottom: 6px solid #cdeaf7; }
 
@@ -232,9 +238,6 @@ h3.toggle-issue::after {
 
 .subsection.no-padding, .section.no-padding {
   padding: 0; }
-
-.subsection.extra-padding {
-  padding: 40px 80px; }
 
 .sub-sub-section {
   margin-bottom: 80px; }
