--- a/scss/section.scss
+++ b/scss/section.scss
@@ -54,6 +54,10 @@
     flex-basis: 50%;
     padding: 0 80px;
   }
+
+  .subsection.extra-padding {
+    padding: 40px 80px;
+  }
 }
 
 @media (max-width: $breakpoint-m) {
@@ -68,6 +72,10 @@
   .subsection {
     padding: 0 30px;
   }
+
+  .subsection.extra-padding {
+    padding: 40px 30px;
+  }
 }
 
 .section.outer.c-white h2 {
@@ -80,10 +88,6 @@
 
 .subsection.no-padding, .section.no-padding {
   padding: 0;
-}
-
-.subsection.extra-padding {
-  padding: 40px 80px;
 }
 
 .sub-sub-section {
